--- a/hot/index.html
+++ b/hot/index.html
@@ -4,7 +4,9 @@
     <title>iLs</title>
     <meta charset="utf-8" />
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="bulma.css"/>
+    <link rel="stylesheet" href="react-select.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css"/>
     <link rel="stylesheet" href="only.css"/>
     <link rel="stylesheet" href="test.css"/>
