--- a/hot/index.html
+++ b/hot/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="bulma.css"/>
     <link rel="stylesheet" href="react-select.css"/>
     <link rel="stylesheet" async href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css"/>
-    <link rel="stylesheet" href="only.css"/>
-    <link rel="stylesheet" href="test.css"/>
+    <link rel="stylesheet" href="//localhost:3001/css/admin.css"/>
 </head>
 <body>
 
   <div id="root"></div>
   <script src="/static/bundle.js"></script>
+  <script src="http://localhost:1337/vorlon.js"></script>
 </body>
 </html>
