--- a/hot/index.html
+++ b/hot/index.html
@@ -3,18 +3,17 @@
   <head>
     <title>iLs</title>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" async href="keypress.js"/>
+    <link rel="shortcut icon" href="inc/favicon.ico" />
+    <link rel="stylesheet" async href="inc/keypress.js"/>
     <link rel="stylesheet" async href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css"/>
-    <link rel="stylesheet" href="bulma.css"/>
-    <link rel="stylesheet" href="react-select.css"/>
+    <link rel="stylesheet" href="inc/bulma.css"/>
+    <link rel="stylesheet" href="inc/react-select.css"/>
     <link rel="stylesheet" async href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css"/>
     <link rel="stylesheet" href="//localhost:3001/css/admin.css"/>
 </head>
 <body>
-
   <div id="root"></div>
   <script src="/static/bundle.js"></script>
-  <script src="http://localhost:1337/vorlon.js"></script>
+  <!-- <script src="http://localhost:1337/vorlon.js"></script> -->
 </body>
 </html>
