--- a/hot/index.html
+++ b/hot/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>iLs</title>
+    <title>HOT</title>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="inc/favicon.ico" />
     <link rel="stylesheet" async href="inc/keypress.js"/>
