--- a/hot/index.html
+++ b/hot/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
   <div id="root"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tunajs/0.4.5/tuna-min.js"></script>
   <script src="/static/bundle.js"></script>
   <!-- <script src="http://localhost:1337/vorlon.js"></script> -->
 </body>
