--- a/hot/index.html
+++ b/hot/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="inc/react-select.css"/>
     <link rel="stylesheet" async href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css"/>
     <link rel="stylesheet" href="//localhost:3000/css/admin.css"/>
-    <link rel="stylesheet" href="//localhost:3000/css/slider.css"/>
 </head>
 <body>
   <div id="root"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tunajs/0.4.5/tuna-min.js"></script>
+  <script src="inc/log.js"></script>
   <script src="/static/bundle.js"></script>
   <!-- <script src="http://localhost:1337/vorlon.js"></script> -->
 </body>
