--- a/hot/index.html
+++ b/hot/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="inc/react-select.css"/>
     <link rel="stylesheet" async href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css"/>
     <link rel="stylesheet" href="//localhost:3000/css/admin.css"/>
+    <link rel="stylesheet" href="//localhost:3000/css/slider.css"/>
     <link rel="stylesheet" href="//localhost:3000/orderSentenceMobile.css"/>
 </head>
 <body>
