--- a/hot/index.html
+++ b/hot/index.html
@@ -29,8 +29,15 @@
 <link rel="stylesheet" href=
 "https://npmcdn.com/react-s-alert@1.1.4/dist/s-alert-css-effects/stackslide.css">
 <link rel="stylesheet" href="//localhost:3000/css/admin.css">
-<link rel="stylesheet" href=
-"//localhost:3000/css/learningMemeAutomated.css">
+<link rel="stylesheet" href="//localhost:3000/css/blogAdmin.css">
+<!-- <link rel="stylesheet" href=
+"//localhost:3000/css/learningMemeAutomated.css"> -->
+<!-- <link rel="stylesheet" href=
+"//localhost:3000/css/learningMemeAutomated.css"> -->
+<!-- <link rel="stylesheet" href=
+"//localhost:3000/css/learningMemeAutomated.css"> -->
+<!-- <link rel="stylesheet" href=
+"//localhost:3000/css/learningMemeAutomated.css"> -->
 <!-- <link rel="stylesheet" href="//localhost:3000/css/admin.css"> -->
 <!-- <link rel="stylesheet" href="//localhost:3000/css/admin.css"> -->
 <!-- <link rel="stylesheet" href="//localhost:3000/css/admin.css"> -->
