--- a/hot/index.html
+++ b/hot/index.html
@@ -29,9 +29,9 @@
 <link rel="stylesheet" href=
 "https://npmcdn.com/react-s-alert@1.1.4/dist/s-alert-css-effects/stackslide.css">
 <link rel="stylesheet" href="//localhost:3000/css/admin.css">
-<link rel="stylesheet" href="//localhost:3000/css/blogAdmin.css">
-<!-- <link rel="stylesheet" href=
-"//localhost:3000/css/learningMemeAutomated.css"> -->
+<!-- <link rel="stylesheet" href="//localhost:3000/css/blogAdmin.css"> -->
+<link rel="stylesheet" href=
+"//localhost:3000/css/learningMemeAutomated.css">
 <!-- <link rel="stylesheet" href=
 "//localhost:3000/css/learningMemeAutomated.css"> -->
 <!-- <link rel="stylesheet" href=
@@ -46,9 +46,8 @@
 </head>
 <body>
 <div id="root"></div>
-<script async src=
-"https://cdnjs.cloudflare.com/ajax/libs/localforage/1.4.2/localforage.min.js">
-</script>
+<!-- <script async src=
+"https://cdnjs.cloudflare.com/ajax/libs/localforage/1.4.2/localforage.min.js"> -->
 <script src="/static/bundle.js">
 </script>
 </body>
