--- a/hot/index.html
+++ b/hot/index.html
@@ -30,8 +30,9 @@
 "https://npmcdn.com/react-s-alert@1.1.4/dist/s-alert-css-effects/stackslide.css">
 <!-- <link rel="stylesheet" href="//localhost:3000/css/admin.css"> -->
 <!-- <link rel="stylesheet" href="//localhost:3000/css/blogAdmin.css"> -->
-<link rel="stylesheet" href=
-"//localhost:3000/css/learningMemeAutomatedExtra.css">
+<link rel="stylesheet" href="//localhost:3000/css/blog.css">
+<!-- <link rel="stylesheet" href=
+"//localhost:3000/css/learningMemeAutomatedExtra.css"> -->
 <!-- <link rel="stylesheet" href=
 "//localhost:3000/css/learningMemeAutomated.css"> -->
 <!-- <link rel="stylesheet" href=
@@ -50,6 +51,8 @@
 "https://cdnjs.cloudflare.com/ajax/libs/tunajs/0.4.5/tuna-min.js"> -->
 <!-- <script async src=
 "https://cdnjs.cloudflare.com/ajax/libs/localforage/1.4.2/localforage.min.js"> -->
+<script src="https://npmcdn.com/microlight@0.0.7">
+</script>
 <script src="/static/bundle.js">
 </script>
 </body>
