--- a/hot/index.html
+++ b/hot/index.html
@@ -28,9 +28,11 @@
 "https://npmcdn.com/react-s-alert@1.1.4/dist/s-alert-css-effects/jelly.css">
 <link rel="stylesheet" href=
 "https://npmcdn.com/react-s-alert@1.1.4/dist/s-alert-css-effects/stackslide.css">
-<!-- <link rel="stylesheet" href="//localhost:3000/css/admin.css"> -->
-<!-- <link rel="stylesheet" href="//localhost:3000/css/blogAdmin.css"> -->
-<link rel="stylesheet" href="//localhost:3000/css/blog.css">
+<link rel="stylesheet" href="//localhost:3000/css/admin.css">
+<link rel="stylesheet" href=
+"https://ilearnsmarter.com/css/slider.css">
+<!-- <link rel="stylesheet" href="css/blogAdmin.css"> -->
+<!-- <link rel="stylesheet" href="//localhost:3000/css/blog.css"> -->
 <!-- <link rel="stylesheet" href=
 "//localhost:3000/css/learningMemeAutomatedExtra.css"> -->
 <!-- <link rel="stylesheet" href=
@@ -47,9 +49,9 @@
 </head>
 <body>
 <div id="root"></div>
-<!-- <script async src=
-"https://cdnjs.cloudflare.com/ajax/libs/tunajs/0.4.5/tuna-min.js"> -->
-<!-- <script async src=
+<script async src=
+"https://cdnjs.cloudflare.com/ajax/libs/tunajs/0.4.5/tuna-min.js">
+</script> <!-- <script async src=
 "https://cdnjs.cloudflare.com/ajax/libs/localforage/1.4.2/localforage.min.js"> -->
 <script src="https://npmcdn.com/microlight@0.0.7">
 </script>
